--- a/package.json
+++ b/package.json
@@ -9,16 +9,67 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "@hello-pangea/dnd": "^17.0.0",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@tiptap/pm": "^2.8.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
+    "@uidotdev/usehooks": "^2.4.1",
+    "@uiw/react-color-circle": "^2.3.2",
+    "@uiw/react-color-wheel": "^2.3.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "culori": "^4.0.1",
+    "embla-carousel-class-names": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
+    "emoji-mart": "^5.6.0",
+    "framer-motion": "^11.11.8",
+    "immutability-helper": "^3.1.1",
+    "lucide-react": "^0.446.0",
+    "next": "14.2.13",
+    "quill": "^2.0.2",
     "react": "^18",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-hook-form": "^7.53.0",
+    "react-quill": "^2.0.0",
+    "react-quilljs": "^2.0.4",
+    "react-slick": "^0.30.2",
+    "react-swapy": "^1.0.2",
+    "react-zoom-pan-pinch": "^3.6.1",
+    "slick-carousel": "^1.8.1",
+    "swapy": "^0.4.1",
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "1.9.2",
+    "@types/culori": "^2.1.1",
     "@types/node": "^20",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
