--- a/package.json
+++ b/package.json
@@ -19,14 +19,23 @@
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tiptap/extension-color": "^2.8.0",
+    "@tiptap/extension-font-family": "^2.9.0",
+    "@tiptap/extension-text-align": "^2.9.0",
+    "@tiptap/extension-text-style": "^2.9.0",
+    "@tiptap/extension-underline": "^2.8.0",
     "@tiptap/pm": "^2.8.0",
     "@tiptap/react": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
@@ -44,15 +53,19 @@
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "quill": "^2.0.2",
+    "re-resizable": "^6.10.0",
     "react": "^18",
+    "react-best-gradient-color-picker": "^3.0.10",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.53.0",
     "react-quill": "^2.0.0",
     "react-quilljs": "^2.0.4",
+    "react-resizable-panels": "^2.1.4",
     "react-slick": "^0.30.2",
     "react-swapy": "^1.0.2",
     "react-zoom-pan-pinch": "^3.6.1",
@@ -72,6 +85,7 @@
     "@types/react": "^18",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
+    "@types/react-grid-layout": "^1.3.5",
     "@types/react-slick": "^0.23.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
