--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hello-pangea/dnd": "^17.0.0",
+    "@legendapp/state": "^3.0.0-beta.13",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -51,6 +52,7 @@
     "framer-motion": "^11.11.8",
     "immutability-helper": "^3.1.1",
     "lucide-react": "^0.446.0",
+    "magic-panel": "^1.0.14",
     "next": "14.2.13",
     "quill": "^2.0.2",
     "re-resizable": "^6.10.0",
@@ -66,6 +68,7 @@
     "react-quill": "^2.0.0",
     "react-quilljs": "^2.0.4",
     "react-resizable-panels": "^2.1.4",
+    "react-rnd": "^10.4.13",
     "react-slick": "^0.30.2",
     "react-swapy": "^1.0.2",
     "react-zoom-pan-pinch": "^3.6.1",
@@ -74,6 +77,7 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
